added: show typed key&char

--- a/Kesikaran_Typist/Base.lproj/Main.storyboard
+++ b/Kesikaran_Typist/Base.lproj/Main.storyboard
@@ -710,7 +710,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="veG-Rx-wIW">
-                                <rect key="frame" x="181" y="164" width="119" height="26"/>
+                                <rect key="frame" x="181" y="194" width="119" height="26"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="Hello, World" id="g8K-5w-Mey">
                                     <font key="font" metaFont="system" size="22"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -729,19 +729,29 @@
                                 </textFieldCell>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Zxa-KR-Wg0">
-                                <rect key="frame" x="207" y="133" width="67" height="16"/>
+                                <rect key="frame" x="193" y="160" width="95" height="24"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="Typed: XX" id="Yp1-qP-g7I">
-                                    <font key="font" metaFont="system"/>
+                                    <font key="font" metaFont="system" size="20"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="IQQ-fd-8P7">
+                                <rect key="frame" x="199" y="131" width="82" height="24"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="Char: XX" id="NRB-7T-62j">
+                                    <font key="font" metaFont="system" size="20"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="Zxa-KR-Wg0" firstAttribute="top" secondItem="veG-Rx-wIW" secondAttribute="bottom" constant="15" id="5L3-cf-N80"/>
-                            <constraint firstItem="veG-Rx-wIW" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="80" id="Q1A-tm-AW5"/>
+                            <constraint firstItem="Zxa-KR-Wg0" firstAttribute="top" secondItem="veG-Rx-wIW" secondAttribute="bottom" constant="10" id="5L3-cf-N80"/>
+                            <constraint firstItem="IQQ-fd-8P7" firstAttribute="centerX" secondItem="m2S-Jp-Qdl" secondAttribute="centerX" id="Bvs-Ou-Lye"/>
+                            <constraint firstItem="veG-Rx-wIW" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="50" id="Q1A-tm-AW5"/>
                             <constraint firstAttribute="bottom" secondItem="qHt-di-hlu" secondAttribute="bottom" constant="90" id="W9H-XE-NqG"/>
                             <constraint firstItem="veG-Rx-wIW" firstAttribute="centerX" secondItem="m2S-Jp-Qdl" secondAttribute="centerX" id="jIl-2r-C8X"/>
+                            <constraint firstItem="IQQ-fd-8P7" firstAttribute="top" secondItem="Zxa-KR-Wg0" secondAttribute="bottom" constant="5" id="ofI-Jh-fSd"/>
                             <constraint firstItem="qHt-di-hlu" firstAttribute="centerX" secondItem="m2S-Jp-Qdl" secondAttribute="centerX" id="p9e-l7-BGQ"/>
                             <constraint firstItem="Zxa-KR-Wg0" firstAttribute="centerX" secondItem="m2S-Jp-Qdl" secondAttribute="centerX" id="rdh-dN-Hyk"/>
                         </constraints>
@@ -749,6 +759,7 @@
                     <connections>
                         <outlet property="label" destination="veG-Rx-wIW" id="OCn-7e-cpv"/>
                         <outlet property="textField" destination="qHt-di-hlu" id="wkU-Af-xcd"/>
+                        <outlet property="typedCharLabel" destination="IQQ-fd-8P7" id="hzr-Nh-I1J"/>
                         <outlet property="typedLabel" destination="Zxa-KR-Wg0" id="vXf-WK-Nhb"/>
                     </connections>
                 </viewController>
