--- a/Kesikaran_Typist/Base.lproj/Main.storyboard
+++ b/Kesikaran_Typist/Base.lproj/Main.storyboard
@@ -705,12 +705,12 @@
         <scene sceneID="hIz-AP-VOD">
             <objects>
                 <viewController id="XfG-lQ-9wD" customClass="ViewController" customModule="Kesikaran_Typist" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" id="m2S-Jp-Qdl" customClass="CustomView" customModule="Kesikaran_Typist" customModuleProvider="target">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="272"/>
+                    <view key="view" appearanceType="aqua" id="m2S-Jp-Qdl" customClass="CustomView" customModule="Kesikaran_Typist" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="0.0" width="668" height="382"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="veG-Rx-wIW">
-                                <rect key="frame" x="181" y="196" width="119" height="26"/>
+                                <rect key="frame" x="275" y="306" width="119" height="26"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="Hello, World" id="g8K-5w-Mey">
                                     <font key="font" metaFont="system" size="22"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -718,7 +718,7 @@
                                 </textFieldCell>
                             </textField>
                             <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="qHt-di-hlu">
-                                <rect key="frame" x="165" y="90" width="150" height="28"/>
+                                <rect key="frame" x="259" y="200" width="150" height="28"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="Klc-K8-Jgw"/>
                                 </constraints>
@@ -729,7 +729,7 @@
                                 </textFieldCell>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Zxa-KR-Wg0">
-                                <rect key="frame" x="193" y="162" width="95" height="24"/>
+                                <rect key="frame" x="287" y="272" width="95" height="24"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="Typed: XX" id="Yp1-qP-g7I">
                                     <font key="font" metaFont="system" size="20"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -737,7 +737,7 @@
                                 </textFieldCell>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="IQQ-fd-8P7">
-                                <rect key="frame" x="199" y="133" width="82" height="24"/>
+                                <rect key="frame" x="293" y="243" width="82" height="24"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="Char: XX" id="NRB-7T-62j">
                                     <font key="font" metaFont="system" size="20"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -745,7 +745,7 @@
                                 </textFieldCell>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kIt-Hg-rsA">
-                                <rect key="frame" x="176" y="50" width="128" height="21"/>
+                                <rect key="frame" x="270" y="160" width="128" height="21"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="TypedKeyLabel" id="lrp-5L-EvX">
                                     <font key="font" metaFont="system" size="18"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -753,29 +753,45 @@
                                 </textFieldCell>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vog-A3-3bB">
-                                <rect key="frame" x="172" y="20" width="136" height="21"/>
+                                <rect key="frame" x="266" y="130" width="136" height="21"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="TypedCharLabel" id="R4K-4B-4Em">
                                     <font key="font" metaFont="system" size="18"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
+                            <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="COo-T5-cft" customClass="KeyView" customModule="Kesikaran_Typist" customModuleProvider="target">
+                                <rect key="frame" x="459" y="151" width="80" height="80"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="80" id="LUv-nO-gy3"/>
+                                    <constraint firstAttribute="height" constant="80" id="ne9-i1-L5D"/>
+                                </constraints>
+                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="Key" id="kgP-mu-ll1"/>
+                            </imageView>
                         </subviews>
                         <constraints>
                             <constraint firstItem="Zxa-KR-Wg0" firstAttribute="top" secondItem="veG-Rx-wIW" secondAttribute="bottom" constant="10" id="5L3-cf-N80"/>
                             <constraint firstItem="vog-A3-3bB" firstAttribute="centerX" secondItem="m2S-Jp-Qdl" secondAttribute="centerX" id="85G-Xe-CFk"/>
+                            <constraint firstItem="COo-T5-cft" firstAttribute="centerY" secondItem="m2S-Jp-Qdl" secondAttribute="centerY" id="BZ3-tU-mws"/>
                             <constraint firstItem="IQQ-fd-8P7" firstAttribute="centerX" secondItem="m2S-Jp-Qdl" secondAttribute="centerX" id="Bvs-Ou-Lye"/>
                             <constraint firstItem="kIt-Hg-rsA" firstAttribute="centerX" secondItem="m2S-Jp-Qdl" secondAttribute="centerX" id="E2T-xK-6xY"/>
                             <constraint firstItem="veG-Rx-wIW" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="50" id="Q1A-tm-AW5"/>
                             <constraint firstItem="qHt-di-hlu" firstAttribute="top" secondItem="IQQ-fd-8P7" secondAttribute="bottom" constant="15" id="SnY-Qz-AAU"/>
+                            <constraint firstItem="COo-T5-cft" firstAttribute="leading" secondItem="qHt-di-hlu" secondAttribute="trailing" constant="50" id="gHq-Sg-9g2"/>
                             <constraint firstItem="veG-Rx-wIW" firstAttribute="centerX" secondItem="m2S-Jp-Qdl" secondAttribute="centerX" id="jIl-2r-C8X"/>
                             <constraint firstItem="IQQ-fd-8P7" firstAttribute="top" secondItem="Zxa-KR-Wg0" secondAttribute="bottom" constant="5" id="ofI-Jh-fSd"/>
                             <constraint firstItem="qHt-di-hlu" firstAttribute="centerX" secondItem="m2S-Jp-Qdl" secondAttribute="centerX" id="p9e-l7-BGQ"/>
                             <constraint firstItem="Zxa-KR-Wg0" firstAttribute="centerX" secondItem="m2S-Jp-Qdl" secondAttribute="centerX" id="rdh-dN-Hyk"/>
                         </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="color" keyPath="backgroundColor">
+                                <color key="value" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                     </view>
                     <connections>
                         <outlet property="label" destination="veG-Rx-wIW" id="OCn-7e-cpv"/>
+                        <outlet property="testKey" destination="COo-T5-cft" id="GVB-5b-Qok"/>
                         <outlet property="textField" destination="qHt-di-hlu" id="wkU-Af-xcd"/>
                         <outlet property="typedCharLabel" destination="IQQ-fd-8P7" id="ZP9-4P-F5d"/>
                         <outlet property="typedKanaLabel" destination="vog-A3-3bB" id="vbu-uY-h7Z"/>
@@ -785,7 +801,10 @@
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="75" y="655"/>
+            <point key="canvasLocation" x="75" y="806"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Key" width="100" height="100"/>
+    </resources>
 </document>
