--- a/Kesikaran_Typist/Base.lproj/Main.storyboard
+++ b/Kesikaran_Typist/Base.lproj/Main.storyboard
@@ -986,7 +986,7 @@
                                             <constraint firstAttribute="width" constant="95" id="YbK-HQ-pte"/>
                                             <constraint firstAttribute="height" constant="48" id="eUc-q2-SeF"/>
                                         </constraints>
-                                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="l_control_Key" id="AdL-GP-S6U"/>
+                                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="left_control_Key" id="AdL-GP-S6U"/>
                                     </imageView>
                                     <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9v0-O7-gYC" userLabel="L_shift">
                                         <rect key="frame" x="104" y="73" width="114" height="48"/>
@@ -994,7 +994,7 @@
                                             <constraint firstAttribute="width" constant="114" id="e63-RT-CVE"/>
                                             <constraint firstAttribute="height" constant="48" id="pvF-19-OE6"/>
                                         </constraints>
-                                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="l_shift_Key" id="yb7-CI-1VF"/>
+                                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="left_shift_Key" id="yb7-CI-1VF"/>
                                     </imageView>
                                     <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="I4p-Vd-QUt" userLabel="L_shift">
                                         <rect key="frame" x="753" y="73" width="167" height="48"/>
@@ -1002,7 +1002,7 @@
                                             <constraint firstAttribute="width" constant="167" id="0ZR-kY-v6m"/>
                                             <constraint firstAttribute="height" constant="48" id="aI0-Cb-pLS"/>
                                         </constraints>
-                                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="r_shift_Key" id="z0F-dk-n00"/>
+                                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="right_shift_Key" id="z0F-dk-n00"/>
                                     </imageView>
                                     <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8EA-Oa-9r1">
                                         <rect key="frame" x="451" y="179" width="48" height="48"/>
@@ -1194,7 +1194,7 @@
                                             <constraint firstAttribute="height" constant="48" id="lZ4-mS-z66"/>
                                             <constraint firstAttribute="width" constant="81" id="wih-p3-BnO"/>
                                         </constraints>
-                                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="l_command_Key" id="HeI-5a-lUX"/>
+                                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="left_command_Key" id="HeI-5a-lUX"/>
                                     </imageView>
                                     <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hjz-dx-4NG" userLabel="L_option">
                                         <rect key="frame" x="190" y="20" width="52" height="48"/>
@@ -1202,7 +1202,7 @@
                                             <constraint firstAttribute="width" constant="52" id="05g-8H-mn7"/>
                                             <constraint firstAttribute="height" constant="48" id="8oI-dS-dUS"/>
                                         </constraints>
-                                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="l_option_Key" id="zaT-of-A8X"/>
+                                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="left_option_Key" id="zaT-of-A8X"/>
                                     </imageView>
                                     <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vg2-fK-nRQ" userLabel="spase">
                                         <rect key="frame" x="333" y="20" width="312" height="48"/>
@@ -1218,7 +1218,7 @@
                                             <constraint firstAttribute="height" constant="48" id="fmK-9O-FpS"/>
                                             <constraint firstAttribute="width" constant="69" id="quq-Xv-Ddp"/>
                                         </constraints>
-                                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="r_command_Key" id="C0c-mF-eHs"/>
+                                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="right_command_Key" id="C0c-mF-eHs"/>
                                     </imageView>
                                     <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9e5-sP-BpV" userLabel="R_option">
                                         <rect key="frame" x="724" y="20" width="69" height="48"/>
@@ -1226,7 +1226,7 @@
                                             <constraint firstAttribute="height" constant="48" id="4xA-mP-Khb"/>
                                             <constraint firstAttribute="width" constant="69" id="Yqo-vX-3bt"/>
                                         </constraints>
-                                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="r_option_Key" id="hzS-q5-gc7"/>
+                                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="right_option_Key" id="hzS-q5-gc7"/>
                                     </imageView>
                                     <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Lmv-IH-ust" userLabel="R_control">
                                         <rect key="frame" x="798" y="20" width="69" height="48"/>
@@ -1234,7 +1234,7 @@
                                             <constraint firstAttribute="height" constant="48" id="4by-ga-F20"/>
                                             <constraint firstAttribute="width" constant="69" id="azR-kz-ykZ"/>
                                         </constraints>
-                                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="r_control_Key" id="qSf-Vd-CIp"/>
+                                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="right_control_Key" id="qSf-Vd-CIp"/>
                                     </imageView>
                                     <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vDj-5T-IFn" userLabel="Fn">
                                         <rect key="frame" x="872" y="20" width="48" height="48"/>
@@ -1428,15 +1428,15 @@
         <image name="backslasj_Key" width="215" height="100"/>
         <image name="capslock_key" width="160" height="100"/>
         <image name="delete_Key" width="259" height="100"/>
-        <image name="l_command_Key" width="169" height="100"/>
-        <image name="l_control_Key" width="202" height="100"/>
-        <image name="l_option_Key" width="108" height="100"/>
-        <image name="l_shift_Key" width="238" height="100"/>
-        <image name="r_command_Key" width="143" height="100"/>
-        <image name="r_control_Key" width="143" height="100"/>
-        <image name="r_option_Key" width="143" height="100"/>
-        <image name="r_shift_Key" width="375" height="100"/>
+        <image name="left_command_Key" width="169" height="100"/>
+        <image name="left_control_Key" width="202" height="100"/>
+        <image name="left_option_Key" width="108" height="100"/>
+        <image name="left_shift_Key" width="238" height="100"/>
         <image name="return_Key" width="274" height="100"/>
+        <image name="right_command_Key" width="143" height="100"/>
+        <image name="right_control_Key" width="143" height="100"/>
+        <image name="right_option_Key" width="143" height="100"/>
+        <image name="right_shift_Key" width="375" height="100"/>
         <image name="spase_Key" width="650" height="100"/>
         <image name="tab_Key" width="161" height="100"/>
     </resources>
