--- a/Kesikaran_Typist/Base.lproj/Main.storyboard
+++ b/Kesikaran_Typist/Base.lproj/Main.storyboard
@@ -852,13 +852,13 @@
                                         </constraints>
                                         <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="A_Key" id="SCN-BL-B5e"/>
                                     </imageView>
-                                    <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Asq-iB-0Le">
+                                    <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Asq-iB-0Le" userLabel="Z">
                                         <rect key="frame" x="223" y="73" width="48" height="48"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="48" id="0NJ-s0-5U1"/>
                                             <constraint firstAttribute="width" constant="48" id="njf-fQ-7vF"/>
                                         </constraints>
-                                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="A_Key" id="JxU-np-jqE"/>
+                                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="Z_Key" id="JxU-np-jqE"/>
                                     </imageView>
                                     <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4zy-rL-81h">
                                         <rect key="frame" x="276" y="73" width="48" height="48"/>
@@ -868,13 +868,13 @@
                                         </constraints>
                                         <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="A_Key" id="Jr6-aE-DYp"/>
                                     </imageView>
-                                    <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qwS-gf-Uf6">
+                                    <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qwS-gf-Uf6" userLabel="C">
                                         <rect key="frame" x="329" y="73" width="48" height="48"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="48" id="V1c-d6-uGY"/>
                                             <constraint firstAttribute="height" constant="48" id="xKy-7d-ZaI"/>
                                         </constraints>
-                                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="A_Key" id="CHP-Di-ZNC"/>
+                                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="C_Key" id="CHP-Di-ZNC"/>
                                     </imageView>
                                     <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Eas-Kc-Xvo">
                                         <rect key="frame" x="382" y="73" width="48" height="48"/>
@@ -884,13 +884,13 @@
                                         </constraints>
                                         <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="A_Key" id="eHx-Xt-NRV"/>
                                     </imageView>
-                                    <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UeM-Kb-ffB">
+                                    <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UeM-Kb-ffB" userLabel="B">
                                         <rect key="frame" x="435" y="73" width="48" height="48"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="48" id="ajv-J6-bmu"/>
                                             <constraint firstAttribute="height" constant="48" id="wHB-m4-ZfI"/>
                                         </constraints>
-                                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="A_Key" id="qUn-Tg-g5Q"/>
+                                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="B_Key" id="qUn-Tg-g5Q"/>
                                     </imageView>
                                     <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Yw4-t9-YL2">
                                         <rect key="frame" x="488" y="73" width="48" height="48"/>
@@ -1424,7 +1424,10 @@
     </scenes>
     <resources>
         <image name="A_Key" width="100" height="100"/>
+        <image name="B_Key" width="100" height="100"/>
+        <image name="C_Key" width="100" height="100"/>
         <image name="Fn_Key" width="100" height="100"/>
+        <image name="Z_Key" width="100" height="100"/>
         <image name="backslasj_Key" width="215" height="100"/>
         <image name="capslock_key" width="160" height="100"/>
         <image name="delete_Key" width="259" height="100"/>
